@@ -1,20 +1,18 @@
 #ifndef _CYAHTZEE_H
 #define _CYAHTZEE_H
 
+#ifndef SCOREDIR                        /* Should be set by configure */
 #define SCOREDIR "/usr/local/lib"
+#endif
+
 #define SCOREFNAME "yahtzee.sco"	/* must allow .L extension */
 
 #define NUM_TOP_PLAYERS 10
 
-/*
-   your linux either:
-   a) has no rename, or
-   b) can't rename regular files if newname exists
-*/
-/* #define HAS_RENAME			/* comment out if you don't */
+/* #define HAS_RENAME	*/		/* Set by configure */
 
 
-#ifdef NOCOLORCURSES
+#ifdef NO_COLOR_CURSES
 #define BGColorOn()
 #define DiceColorOn()      standout()
 #define DiceColorOff()     standend()
@@ -24,15 +22,6 @@
 #define TotalsColorOff()   standend()
 #define HScoreColorOn()
 #define HScoreColorOff()
-#define ACS_HLINE		'-'
-#define ACS_VLINE		'|'
-#define ACS_LRCORNER		'+'
-#define ACS_URCORNER		'+'
-#define ACS_LLCORNER		'+'
-#define ACS_ULCORNER		'+'
-#define ACS_LTEE		'+'
-#define ACS_RTEE		'+'
-#define ACS_TTEE		'-'
 #else
 /*=== Be careful with these multi command defines, always use {} w/if ===*/
 #define BGColorOn()        attron(COLOR_PAIR(2))
@@ -45,6 +34,37 @@
 #define HScoreColorOn()    attron(COLOR_PAIR(4))
 #define HScoreColorOff()   attroff(COLOR_PAIR(4));BGColorOn()
 #endif
+
+/* Yuk, but I don't know what curses will have what defined */
+#ifndef ACS_HLINE
+#define ACS_HLINE	   '-'
+#endif
+#ifndef ACS_VLINE
+#define ACS_VLINE	   '|'
+#endif
+#ifndef ACS_LRCORNER
+#define ACS_LRCORNER	   '+'
+#endif
+#ifndef ACS_URCORNER
+#define ACS_URCORNER	   '+'
+#endif
+#ifndef ACS_LLCORNER
+#define ACS_LLCORNER	   '+'
+#endif
+#ifndef ACS_ULCORNER
+#define ACS_ULCORNER	   '+'
+#endif
+#ifndef ACS_LTEE
+#define ACS_LTEE	   '+'
+#endif
+#ifndef ACS_RTEE
+#define ACS_RTEE	   '+'
+#endif
+#ifndef ACS_TTEE
+#define ACS_TTEE           ACS_HLINE
+#endif
+
+
 
 #endif /* _CYAHTZEE_H */
 
