@@ -1,0 +1,6 @@
+Makefile.in
+Makefile
+.deps
+.directory
+_libs
+.libs
