@@ -1,3 +1,8 @@
+Fri Jun 26 14:42:22 1998  Scott D. Heavner  <sdh@po.cwru.edu>
+
+	* Makefile.am: Add cyahtzee back in as conditional build
+	* cyahtzee.c/h: update names of defines to match curses.m4
+
 1998-06-26  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* Makefile.am (cyahtzee): Disable until Curses is properly
@@ -72,3 +77,7 @@ Wed Jun 17 23:00:00 1998  Scott D. Heavner  <sdh@fishmonger.dont.mail.me.here.ne
 
 	* Release version 980617
 	
+
+*Local Variables:
+*backup-inhibited: t
+*End:
