@@ -1,3 +1,8 @@
+Fri Jun 26 14:40:03 1998  Scott D. Heavner  <sdh@po.cwru.edu>
+
+	* configure.in: AC_CHECK_CURSES & AM_CONDITIONAL(HAS_CURSES)
+	* acconfig.h: AC_DEFINES from macros/curses.m4
+
 1998-06-26  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* configure.in (AC_OUTPUT): Add `gyahtzee/pix/Makefile'.
